plugins/kotlin/idea/tests/testData/multiplatform/simple/d1/d1.kt
package foo
expect class <!LINE_MARKER("descr='Has actuals in d3 module'")!>A<!>
